--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Chicken Road Crash Game – RTP 98%, How to Play & Best Casinos</title>
-  <meta name="description" content="Chicken Road is a popular crash game with RTP ~98%. Learn how to play, strategies, and where to play Chicken Road online with real casino bonuses.">
+  <title>Резюме – Бармен / Бар-менеджер</title>
+  <meta name="description" content="Профессиональное резюме бармена и бар-менеджера. Опыт работы, навыки, образование и контакты.">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,56 +18,38 @@
 <nav>
   <div class="nav-container">
     <a href="#" class="logo">
-      <div class="logo-icon">🐔</div>
-      Chicken Road
+      <div class="logo-icon">🍹</div>
+      Резюме Бармена
     </a>
     <ul class="nav-links">
-      <li><a href="#about">About</a></li>
-      <li><a href="#howto">How to Play</a></li>
-      <li><a href="#where">Where to Play</a></li>
-      <li><a href="#compare">Comparison</a></li>
+      <li><a href="#about">О себе</a></li>
+      <li><a href="#skills">Навыки</a></li>
+      <li><a href="#experience">Опыт</a></li>
+      <li><a href="#education">Образование</a></li>
+      <li><a href="#contact">Контакты</a></li>
     </ul>
-    <a href="#where" class="nav-cta"><span>Play Now</span></a>
+    <a href="#contact" class="nav-cta"><span>Связаться</span></a>
     <button class="mobile-menu-btn">☰</button>
   </div>
 </nav>
 
-<!-- HERO -->
+<!-- HERO / О себе -->
 <section class="hero" id="about">
   <div class="hero-container">
 
     <!-- TEXT -->
     <div class="hero-content">
-      <div class="hero-badge">
-        <span>●</span>Chicken Road features a theoretical RTP of ~98%. As a crash game, outcomes depend on player decisions and timing.
-      </div>
-
-      <h1>Chicken Road – High RTP Crash Casino Game</h1>
+      <h1>Иван Иванов – Бармен / Бар-менеджер</h1>
 
       <p class="hero-description">
-        Chicken Road is a fast-paced crash game where the multiplier increases
-        step by step as the chicken crosses the road. Cash out before the crash
-        to secure your winnings. Simple rules, high volatility, instant action.
+        Опытный бармен с более чем 5 лет работы в динамичных барах и ресторанах. 
+        Специализируюсь на коктейлях, обслуживании гостей и управлении барной командой. 
+        Ценю качество сервиса, чистоту и профессиональный подход к каждому посетителю.
       </p>
 
       <div class="hero-buttons">
-        <a href="#where" class="btn-primary">Play Chicken Road →</a>
-        <a href="#howto" class="btn-secondary">How It Works</a>
-      </div>
-
-      <div class="hero-stats">
-        <div class="stat">
-          <div class="stat-value">98%</div>
-          <div class="stat-label">RTP</div>
-        </div>
-        <div class="stat">
-          <div class="stat-value">Crash</div>
-          <div class="stat-label">Game Type</div>
-        </div>
-        <div class="stat">
-          <div class="stat-value">x500+</div>
-          <div class="stat-label">Max Multiplier</div>
-        </div>
+        <a href="#experience" class="btn-primary">Мой опыт →</a>
+        <a href="#skills" class="btn-secondary">Навыки</a>
       </div>
     </div>
 
@@ -75,8 +57,8 @@
     <div class="guitar-wrapper">
       <div class="guitar-card">
         <img
-          src="images/chicken-road-game.png.png"
-          alt="Chicken Road crash game interface showing multiplier and cash out"
+          src="images/barman-profile.png"
+          alt="Фото бармена в работе"
           style="width:100%;height:auto;border-radius:16px;display:block;"
         >
       </div>
@@ -85,196 +67,77 @@
   </div>
 </section>
 
-<!-- HOW TO PLAY -->
-<section class="pricing" id="howto">
+<!-- SKILLS -->
+<section class="pricing" id="skills">
   <div class="section-container">
     <div class="section-header">
-      <div class="section-label">Guide</div>
-      <h2 class="section-title">How to Play Chicken Road</h2>
+      <div class="section-label">Навыки</div>
+      <h2 class="section-title">Профессиональные навыки</h2>
       <p class="section-description">
-        Follow these steps to start playing Chicken Road crash game online.
+        Ключевые навыки и компетенции, которые я использую на работе.
       </p>
     </div>
 
     <div class="pricing-grid">
-      <!-- Block 1 -->
       <div class="pricing-card">
-        <h3>1. Place Your Bet</h3>
-        <p>
-          <strong>Place Your Bet</strong><br>
-          Choose your stake before the round starts. Chicken Road is a high-volatility crash game, so responsible bankroll management is essential.
-        </p>
+        <h3>Коктейли и напитки</h3>
+        <p>Создание классических и авторских коктейлей, мастерство в миксологии.</p>
       </div>
-
-      <!-- Block 2 -->
       <div class="pricing-card">
-        <h3>2. Watch the Multiplier</h3>
-        <p>
-          <strong>Watch the Multiplier Grow</strong><br>
-          As the chicken moves forward, the multiplier increases in real time. The longer you stay in the round, the higher the potential payout — and the higher the risk.
-        </p>
+        <h3>Обслуживание гостей</h3>
+        <p>Высокий уровень сервиса, внимание к деталям, коммуникация с клиентами.</p>
       </div>
-
-      <!-- Block 3 -->
       <div class="pricing-card">
-        <h3>3. Cash Out Before the Crash</h3>
-        <p>
-          <strong>Cash Out in Time</strong><br>
-          Click the Cash Out button before the crash occurs. If the crash happens first, the bet is lost.
-        </p>
+        <h3>Управление баром</h3>
+        <p>Контроль запасов, организация работы команды, обучение персонала.</p>
       </div>
-
-      <!-- Block 4 -->
       <div class="pricing-card">
-        <h3>4. Select Difficulty Mode</h3>
-        <p>
-          <strong>Choose a Difficulty Mode</strong><br>
-          Chicken Road offers multiple difficulty levels — Easy, Medium, Hard, and Hardcore. Each mode affects crash frequency and maximum multiplier potential.
-        </p>
+        <h3>Соблюдение стандартов</h3>
+        <p>Чистота и санитарные нормы, соблюдение стандартов безопасности.</p>
       </div>
-
-      <!-- Block 5 -->
       <div class="pricing-card">
-        <h3>5. Understand the Risk</h3>
-        <p>
-          <strong>Understand the Risk</strong><br>
-          Chicken Road is based on timing and decision-making. Results vary, and no strategy guarantees profit.
-        </p>
+        <h3>Кассовая дисциплина</h3>
+        <p>Учет продаж, работа с кассовым аппаратом и системами учета.</p>
       </div>
-
-      <!-- Block 6 -->
       <div class="pricing-card">
-        <h3>6. Play Responsibly</h3>
-        <p>
-          <strong>Play Responsibly</strong><br>
-          Set limits and play for entertainment. Crash games can be fast-paced and unpredictable.
-        </p>
+        <h3>Креативность</h3>
+        <p>Разработка новых коктейлей, участие в мероприятиях и дегустациях.</p>
       </div>
     </div>
   </div>
 </section>
 
-
-<!-- WHERE TO PLAY -->
-<section class="testimonials" id="where">
+<!-- EXPERIENCE -->
+<section class="testimonials" id="experience">
   <div class="section-container">
     <div class="section-header">
-      <div class="section-label">Casinos</div>
-      <h2 class="section-title">Where to Play Chicken Road Online</h2>
-      <p class="section-description">
-        Play Chicken Road at trusted online casinos offering real money,
-        demo mode, and exclusive bonuses.
-      </p>
+      <div class="section-label">Опыт работы</div>
+      <h2 class="section-title">Мой профессиональный опыт</h2>
     </div>
 
     <div style="overflow-x:auto;">
       <table style="width:100%;border-collapse:collapse;">
         <thead>
           <tr>
-            <th>Casino</th>
-            <th>Welcome Bonus</th>
-            <th>Key Features</th>
-            <th>Rating</th>
+            <th>Период</th>
+            <th>Компания</th>
+            <th>Должность</th>
+            <th>Основные обязанности</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td><strong>Stake</strong></td>
-            <td>$10 No Deposit + Rakeback</td>
-            <td>Crypto, instant payouts</td>
-            <td>★★★★★</td>
+            <td>2022 – 2026</td>
+            <td><strong>Бар «Cocktail Lounge»</strong></td>
+            <td>Бар-менеджер</td>
+            <td>Управление баром, обучение команды, закупки и контроль запасов, организация мероприятий.</td>
           </tr>
           <tr>
-            <td><strong>1xBet</strong></td>
-            <td>100% up to $100 + Free Spins</td>
-            <td>Global access, fast withdrawals</td>
-            <td>★★★★★</td>
+            <td>2018 – 2022</td>
+            <td><strong>Ресторан «Golden Spoon»</strong></td>
+            <td>Старший бармен</td>
+            <td>Создание коктейлей, обслуживание гостей, контроль барного инвентаря, ведение кассы.</td>
           </tr>
           <tr>
-            <td><strong>MelBet</strong></td>
-            <td>100% up to $130</td>
-            <td>Crash games focus</td>
-            <td>★★★★</td>
-          </tr>
-          <tr>
-            <td><strong>1Win</strong></td>
-            <td>500% up to $1,200</td>
-            <td>High bonus value</td>
-            <td>★★★</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-</section>
-
-<!-- COMPARISON -->
-<section class="features" id="compare">
-  <div class="section-container">
-    <div class="section-header">
-      <div class="section-label">Comparison</div>
-      <h2 class="section-title">Chicken Road vs Other Crash Games</h2>
-      <p class="section-description">
-        How Chicken Road compares with the most popular crash games.
-      </p>
-    </div>
-
-    <div class="features-grid">
-      <div class="feature-card">
-        <h3>Chicken Road</h3>
-        <p>RTP ~98%, multiple difficulty modes, provably fair.</p>
-      </div>
-      <div class="feature-card">
-        <h3>Aviator</h3>
-        <p>RTP ~97%, social features, industry leader.</p>
-      </div>
-      <div class="feature-card">
-        <h3>JetX</h3>
-        <p>RTP ~96-97%, fast gameplay.</p>
-      </div>
-      <div class="feature-card">
-        <h3>Spaceman</h3>
-        <p>RTP ~96%, space-themed crash mechanics.</p>
-      </div>
-      <div class="feature-card">
-        <h3>RocketX</h3>
-        <p>RTP ~97%, minimalistic design, high volatility.</p>
-      </div>
-      <div class="feature-card">
-        <h3>Crash (Original / Crash Games by casinos)</h3>
-        <p>RTP ~95–97%, classic crash mechanics, widely available.</p>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- CTA -->
-<section class="cta">
-  <div class="section-container cta-content">
-    <h2>Ready to Play Chicken Road?</h2>
-    <p>
-      Try the demo or play for real money at trusted crash game casinos.
-      Always gamble responsibly.
-    </p>
-    <a href="#where" class="btn-primary">Play Now →</a>
-  </div>
-</section>
-
-<!-- FOOTER -->
-<footer>
-  <div class="footer-container">
-    <div class="footer-bottom">
-      <span>© 2026 Chicken Road Guide — Informational Website</span>
-    </div>
-  </div>
-</footer>
-
-</body>
-</html>
-
-
-
-
-
-
-
+            <td>2016 – 2018</td>
+            <td><strong>Бар «Happy Hour»</strong></td>
