--- a/index.html
+++ b/index.html
@@ -141,3 +141,55 @@
           <tr>
             <td>2016 – 2018</td>
             <td><strong>Бар «Happy Hour»</strong></td>
+            <td>Бармен</td>
+            <td>Приготовление напитков, работа с клиентами, поддержание чистоты и порядка.</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</section>
+
+<!-- EDUCATION -->
+<section class="features" id="education">
+  <div class="section-container">
+    <div class="section-header">
+      <div class="section-label">Образование</div>
+      <h2 class="section-title">Мое образование</h2>
+    </div>
+
+    <div class="features-grid">
+      <div class="feature-card">
+        <h3>2014 – 2016</h3>
+        <p>Кулинарная школа «Gourmet Academy», Москва — Курсы барного дела</p>
+      </div>
+      <div class="feature-card">
+        <h3>2010 – 2014</h3>
+        <p>Колледж гостиничного сервиса, Санкт-Петербург — Диплом специалиста по ресторанному бизнесу</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- CONTACT / CTA -->
+<section class="cta" id="contact">
+  <div class="section-container cta-content">
+    <h2>Свяжитесь со мной</h2>
+    <p>
+      Готов обсудить вакансии бармена или бар-менеджера. Можете написать по электронной почте или позвонить.
+    </p>
+    <a href="mailto:ivan.ivanov@example.com" class="btn-primary">Написать →</a>
+  </div>
+</section>
+
+<!-- FOOTER -->
+<footer>
+  <div class="footer-container">
+    <div class="footer-bottom">
+      <span>© 2026 Иван Иванов — Резюме Бармена / Бар-менеджера</span>
+    </div>
+  </div>
+</footer>
+
+</body>
+</html>
